#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_python
#------------------------------------------------------------------------

Package author: Joseph S. Barrera

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-18
2015-5-28 David Schneider
- update to pdsdata 8.2.9 with BldDataSpectrometerV1 hproj int32 fix, JIRA PSAS-151

Tag: V00-08-18
2015-5-1 David Schneider
- update to pdsdata 8.2.7 with BldDataAnalogInputV1, JIRA PSAS-144

Tag: V00-08-17
2015-2-23 David Schneider
- update to pdsdata 8.2.4 with EvrDataV4 and present function

Tag: V00-08-16
2015-2-4 David Schneider
- update psddlc wrapper, JIRA PSAS-103

Tag: V00-08-15
2015-2-2 David Schneider
- regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
  test bits on Quartz configV2 and smlData.
- track JIRA PSAS-103.

Tag: V00-08-14
2014-11-25 David Schneider
- regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
  TimeTool::DataV2, Quartz::ConfigV2
- Track JIRA issue PSAS-72

Tag: V00-08-13
2014-10-23 David Schneider
- regenerate for new pdsdata 8.1.8/psddldata V01-00-19 with Epix::Config100aV1 and Epix::ElementV2
  Track JIRA issue PSAS-56

Tag: V00-08-12
2014-10-15 David Schneider
- regenerate for new pdsdata 8.1.7/psddldata V01-00-18 with Bld::BldDataSpectrometerV1
  Track JIRA issue PSAS-50

Tag: V00-08-11
2014-10-03 David Schneider
- regenerate for new pdsdata 8.1.4/psddldata with:
  Evr::IOConfigV2

Tag: V00-08-10
2014-09-18 David Schneider
- regenerate for new pdsdata 8.1.3/psddldata with:
  TimeTool::ConfigV1, TimeTool::DataV1, L3T::DataV2, GenericPgp::ConfigV1

Tag: V00-08-09
2014-07-03 David Schneider
- regenerate for new pdsdata/psddldata with BldEBeamV6

Tag: V00-08-08
2014-06-14 David Schneider
- regenerate whole thing from psddldata V01-00-10
- trac ticket #309
